# maker-assistant

./: .gitignore  LICENSE  pyproject.toml
app/pages/: kanban.py  prioritise.py  project_management.py  research_agent.py
app/prompts/: workshop_assistant.txt
